--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -4,8 +4,9 @@
     left: 0;
     width: 100%;
     height: 5rem;
-    background-color: #8a2b06;
-    color: white;
+    background-color: #e9a178;
+    color: rgb(0, 0, 0);
+    border-radius: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -16,14 +17,15 @@
 
 .main-image {
     width: 100%;
-    height: 25rem;
+    height: 80%;
     z-index: 0;
     overflow: hidden;
+    margin-top: 5rem;
 }
 
 .main-image img {
     width: 110%;
     height: 100%;
     object-fit: cover;
-    transform: rotateZ(-5deg) translateY(-4rem) translateX(-1rem);
+    transform: rotateZ(-4deg) translateY(-4rem) translateX(-1rem);
 }
