--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -34,11 +34,11 @@
     color: white;
 }
 
-.actions .button--alt {
+.actions .btn--alt {
     color: #8a2b06;
 }
 
-.actions .button {
+.actions .btn {
     background-color: #8a2b06;
     color: white;
 }
